--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First Project with git</title>
-</head>
-<body>
+  </head>
+  <body>
     <h2>First Commit with Git.</h2>
-</body>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum nam modi
+      natus animi ducimus fugit, blanditiis suscipit fuga omnis tempore debitis
+      ipsam delectus quidem odio adipisci consequuntur beatae tempora aliquam
+      veritatis officiis magnam! Fugit suscipit libero hic blanditiis molestias
+      quibusdam distinctio, fugiat recusandae magnam voluptatibus doloribus
+      repellat porro eligendi dolores?
+    </p>
+  </body>
 </html>
