--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h2>First Commit with Git.</h2>
     <h3>Hello dear student</h3>
     <h1>first day of push git colabrator</h1>
+    <h2>the man of thai</h2>
 </body>
 </html>
