--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Project with git</title>
-  </head>
-  <body>
+</head>
+<body>
     <h2>First Commit with Git.</h2>
-<<<<<<< HEAD
     <h3>Hello dear student</h3>
     <h1>first day of push git colabrator</h1>
     <h2>the man of thai</h2>
@@ -15,15 +14,3 @@
     <p>Today we learn about Git Collaboration.</p>
     
 <h1>This is the version from GitHub</h1>
-=======
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum nam modi
-      natus animi ducimus fugit, blanditiis suscipit fuga omnis tempore debitis
-      ipsam delectus quidem odio adipisci consequuntur beatae tempora aliquam
-      veritatis officiis magnam! Fugit suscipit libero hic blanditiis molestias
-      quibusdam distinctio, fugiat recusandae magnam voluptatibus doloribus
-      repellat porro eligendi dolores?
-    </p>
-  </body>
-</html>
->>>>>>> eb2962eb47f7bc56efc2c8dc3c180278ce8fb855
