create a new branch

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
       quibusdam distinctio, fugiat recusandae magnam voluptatibus doloribus
       repellat porro eligendi dolores?
     </p>
+    <p>Create a new branch</p>
   </body>
 </html>
