--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>first day of push git colabrator</h1>
     <h2>the man of thai</h2>
     <p>Today we learn about Git Collaboration.</p>
+    <b>hello</b>
     
 <h1>This is the version from GitHub</h1>
