--- a/git.html
+++ b/git.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello, I'm sothea</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, dolorem?</p>
 </body>
 </html>
