write first line

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>the man of thai</h2>
     <p>Today we learn about Git Collaboration.</p>
     <b>hello</b>
+    <h2> one life pain forever</h2>
     
 <h1>This is the version from GitHub</h1>
